# histogram-magnitude

./: README.md  histogram-magnitude.cabal
benchmark/: Bench.hs
src/Statistics/Sample/Histogram/: Magnitude.hs
test/Statistics/Sample/Histogram/: MagnitudeSpec.hs
