name:                histogram-magnitude
version:             0.1.0.0
synopsis:            A monoidal histogram who's range is bound by orders of magnitude.
description:         Please see README.md
homepage:            https://github.com/skedgeme/histogram-magnitude#readme
license:             BSD3
license-file:        LICENSE
author:              Evan Rutledge Borden
maintainer:          evan@evan-borden.com
copyright:           2016 skedge.me
category:            Math, Statistics
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Statistics.Sample.Histogram.Magnitude
  build-depends:       base >= 4.7 && < 5
                     , vector
  default-language:    Haskell2010

test-suite histogram-magnitude-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , histogram-magnitude
                     , hspec
                     , QuickCheck
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/skedgeme/histogram-magnitude
